--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cleanup-sample-data": "node cleanup-sample-data.js"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
