--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@supabase/supabase-js": "^2.57.4",
     "dotenv": "^17.2.2",
+    "framer-motion": "^12.23.15",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
